tests/expected_invalid_reserved_names.diag.out
<input>:3:5: error: public name 'AllowAll' is reserved or too generic
        AllowAll,
        ^^^^^^^^
